fix wrong height

--- a/src/assets/xepub/page.css
+++ b/src/assets/xepub/page.css
@@ -1,10 +1,5 @@
 @import url("./colors.css");
 
-img {
-  max-width: 100%;
-  user-select: none;
-}
-
 * {
   color: var(--font-color2);
   font-family: var(--font-family) !important;
